<resources>
    <string name="app_name">CarLoanCalculator</string>
    <string name="car_price">Car Price :</string>
    <string name="down_payment_amount">Down Payment Amount :</string>
    <string name="loan_period">Loan Period (year) :</string>
    <string name="interest_rate">Interest Rate :</string>
    <string name="car_loan">Car Loan :</string>
    <string name="interest">Interest :</string>
    <string name="monthly_repayment">Monthly Repayment :</string>
    <string name="calculate_button">calculate</string>
</resources>
