<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/down_payment_amount_text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/down_payment_amount"
        app:layout_constraintBaseline_toBaselineOf="@+id/down_payment_amount_editText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/loan_period_text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/loan_period"
        app:layout_constraintBaseline_toBaselineOf="@+id/loan_period_editText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/interest_rate_text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/interest_rate"
        app:layout_constraintBaseline_toBaselineOf="@+id/interest_rate_editText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/car_price_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/down_payment_amount_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/down_payment_amount_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/loan_period_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_price_editText" />

    <EditText
        android:id="@+id/loan_period_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/interest_rate_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/down_payment_amount_editText" />

    <EditText
        android:id="@+id/interest_rate_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/car_loan_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_period_editText" />

    <TextView
        android:id="@+id/car_loan_text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_loan"
        app:layout_constraintBaseline_toBaselineOf="@+id/car_loan_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/interest_text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/interest"
        app:layout_constraintBaseline_toBaselineOf="@+id/interest_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/monthly_repayment_text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/monthly_repayment"
        app:layout_constraintBaseline_toBaselineOf="@+id/monthly_repayment_view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/car_price_Text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/car_price"
        app:layout_constraintBaseline_toBaselineOf="@+id/car_price_editText"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthly_repayment_view" />

    <TextView
        android:id="@+id/car_loan_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/interest_view"
        app:layout_constraintEnd_toEndOf="@+id/interest_rate_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/interest_rate_editText"
        app:layout_constraintTop_toBottomOf="@+id/interest_rate_editText" />

    <TextView
        android:id="@+id/interest_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/monthly_repayment_view"
        app:layout_constraintEnd_toEndOf="@+id/car_loan_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/car_loan_view"
        app:layout_constraintTop_toBottomOf="@+id/car_loan_view" />

    <TextView
        android:id="@+id/monthly_repayment_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/calculate_button"
        app:layout_constraintEnd_toEndOf="@+id/interest_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/interest_view"
        app:layout_constraintTop_toBottomOf="@+id/interest_view" />

</androidx.constraintlayout.widget.ConstraintLayout>